welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:9: error: ';' expected but 'for' found.
}for (j<-1 to 5) {avance()}
 ^